# cos_log

./: CMakeLists.txt
include/: log.h  macros.h
src/: CMakeLists.txt  log.c
